--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
 	</head>
 	<body>
         <header>
-		<div id="nav">
-			<!-- view scores link on the top left of nav bar-->
 			<div class="left">
                 <a onclick="getScore()" href="#"><h7 >HighScores</h7></a>
 			</div>
-			<!-- countdown timer on the top right of nav bar-->
 			<div class="right">
 				<h7>Time: <span id="secondsLeft">0</span></h7>
-            </div>
         </header>
 
-		</div>
-		<!-- The Quiz -->
+        <!-- The Quiz -->
+
+    <div class="container col-lg-8 col-md-8 col-sm-8 mx-auto">
 		<div id="quiz">
             <div id="quizBody"> 
                 <div class="jumbotron">     
@@ -42,6 +39,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
