got the quiz to work with timer and score

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
                  <a onclick="getScore()" href="#"><h4 >Highscores</h4></a>
 			    </div>
 			    <div class="right">
-				<h4>Time: <span id="timeLeft">0</span></h4>
+				<h4>Time: <span id="secondsLeft">0</span></h4>
                 </div>
             </div>
 
         <!-- The Quiz -->
-
-    <div class="container col-lg-8 col-md-8 col-sm-8 mx-auto">
+            <div class="row mx-auto"
 		    <div id="quiz">
                  <div id="quizBody">      
                      <h1>How well do you know coding?</h1>
@@ -35,7 +34,6 @@
                         <br>
                         <br>
                  <button onclick="start()">Start!</button>
-                </div>
             </div>
         </div>
     </div>
