--- a/index.html
+++ b/index.html
@@ -3,40 +3,46 @@
 <html>
 	<head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link href="style.css" rel="stylesheet" type="text/css">
-        <script src = "quiz.js" type="text/javascript"></script>
-        <script src = "questions.js" type="text/javascript"></script>
-
+    
         <title>Code Quiz</title>
 
 	</head>
 	<body>
-        <div id="nav">
-            <div class="row mx-auto">
-			    <div class="left">
-                 <a onclick="getScore()" href="#"><h4 >Highscores</h4></a>
-			    </div>
-			    <div class="right">
-				<h4>Time: <span id="secondsLeft">0</span></h4>
-                </div>
+
+        <!---The Timer with Link to High Score-->
+
+
+        <header>
+
+            <div id="nav mx-auto col-lg-8 col-md-6 col-sm-6">
+                 <div class="row mx-auto">
+                     <a class="float-left" onclick="getScore()" href="#"><h4 >Highscores</h4></a>
+                    <h4>Time: <span class="float-right" id="secondsLeft">0</span></h4>
+                 </div>
             </div>
+        </header>
 
         <!-- The Quiz -->
-            <div class="row mx-auto"
+            <div class="container mx-auto col-lg-8 col-md-6 col-sm-6">
 		    <div id="quiz">
                  <div id="quizBody">      
                      <h1>How well do you know coding?</h1>
-                     <p>You will have 75 seconds to complete 5 questions that will test your knowledge of Coding.
+                     <p>You will have 75 seconds to complete 5 questions, each question is worth 20 points. This will test your knowledge of Coding.
                         Click the start button at the bottom of the page to start the quiz.</p>
                         <br>
                         <p> Note: If the answer you select is incorrect, then the timer will decrease 15 seconds</p>
                         <br>
                         <br>
                  <button onclick="start()">Start!</button>
+                 </div>
             </div>
         </div>
     </div>
+
+    <script src = "quiz.js"></script>
+    <script src = "questions.js"></script>
 
 	</body>
 </html>
