--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 
 <html>
+    
 	<head>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <link href="style.css" rel="stylesheet" type="text/css">
     
         <title>Code Quiz</title>
@@ -16,7 +22,7 @@
 
         <header>
 
-            <div id="nav mx-auto col-lg-8 col-md-6 col-sm-6">
+            <div id="nav mx-auto col-lg-8 col-md-8 col-sm-6">
                  <div class="row mx-auto">
                      <a class="float-left" onclick="getScore()" href="#"><h4 >Highscores</h4></a>
                     <h4>Time: <span class="float-right" id="secondsLeft">0</span></h4>
@@ -25,11 +31,11 @@
         </header>
 
         <!-- The Quiz -->
-            <div class="container mx-auto col-lg-8 col-md-6 col-sm-6">
+            <div class="container mx-auto col-lg-8 col-md-8 col-sm-6">
 		    <div id="quiz">
                  <div id="quizBody">      
                      <h1>How well do you know coding?</h1>
-                     <p>You will have 75 seconds to complete 5 questions, each question is worth 20 points. This will test your knowledge of Coding.
+                        <p>You will have 75 seconds to complete 5 questions, each question is worth 20 points. This will test your knowledge of Coding.
                         Click the start button at the bottom of the page to start the quiz.</p>
                         <br>
                         <p> Note: If the answer you select is incorrect, then the timer will decrease 15 seconds</p>
