intial read me page upload

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 
         <header>
 
-            <div id="nav mx-auto col-lg-8 col-md-8 col-sm-6">
-                 <div class="row mx-auto">
+            <div id="nav">
+                <div class="row mx-auto col-lg-8 col-md-8 col-sm-6"">
+                     <div class="left">
                      <a onclick="displayScore()" href="#"><h4 >Highscores</h4></a>
-                    <h4>Time: <span id="secondsLeft">0</span></h4>
+                     </div>
+                     <div class="right"
+                     <h8> Time: <span id="secondsLeft">0</span></h8>
+                     </div>
                  </div>
             </div>
         </header>
