--- a/index.html
+++ b/index.html
@@ -19,20 +19,16 @@
 
         <header>
 
-            <div id="nav">
-                <div class="row mx-auto col-lg-8 col-md-8 col-sm-6"">
-                     <div class="left">
-                     <a onclick="displayScore()" href="#"><h4 >Highscores</h4></a>
-                     </div>
-                     <div class="right"
-                     <h8> Time: <span id="secondsLeft">0</span></h8>
-                     </div>
+            <div id="nav justify-content-center">
+                <div class="row mx-auto col-lg-6 col-md-6 col-sm-6"">
+                     <a onclick="getScore()" href="#"><h4 >Highscores</h4></a>
+                     <h8>Time: <span id="secondsLeft">0</span></h8>
                  </div>
             </div>
         </header>
 
         <!-- The Quiz -->
-            <div class="container mx-auto col-lg-8 col-md-8 col-sm-6">
+            <div class="container mx-auto col-lg-9 col-md-9 col-sm-9">
 		    <div id="quiz">
                  <div id="quizMain">      
                      <h1>How well do you know coding?</h1>
